# simple-social-token

./: .gitignore  .gitmodules  Cargo.toml  README.md  capsule.toml
contracts/simple-social-token/: Cargo.toml
contracts/simple-social-token/src/: entry.rs  error.rs  main.rs
smt-c-scripts/: Makefile
smt-c-scripts/c/: ckb_smt.h  ckb_smt_test.c  sst.h
sst-mol/: Cargo.toml
sst-mol/src/: mol.rs  sst.mol
tests/: Cargo.toml
tests/src/tests/: misc.rs  mod.rs  mol.rs  sst.mol  test_contracts.rs  test_smt.rs
